# StackPros

./: .gitignore  README.md  docker-compose.yml
frontend/src/: App.css  App.js  services.js
frontend/src/breadcrumb/: breadcrumb.js
frontend/src/mainpanel/: mainpanel.js
frontend/src/navpanel/: navpanel.js
server/: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
server/filesystem/: models.py  serializers.py  urls.py  views.py
server/filesystem/migrations/: 0001_initial.py  0002_filestructure_parent_alter_filestructure_child.py
server/server/: settings.py  transform.py  urls.py
